steven 第六次修改

--- a/pages/index.html
+++ b/pages/index.html
@@ -412,7 +412,7 @@
                 <button class="btn btn-secondary" onclick="loadSample()" data-tooltip="載入範例JSON">
                     <span>📄</span> 範例
                 </button>
-                <a class="btn btn-secondary" href="/pages/steven.html" data-tooltip="載入Steven">
+                <a class="btn btn-secondary" href="/steven.html" data-tooltip="載入Steven">
                     <span>S</span> Steven
                 </a>
             </div>
